--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,7 @@
 
                         <li><a href="{{ url_for('login') }}">Login</a></li>
                     {% else %}
+                        <li><a href="{{ url_for('search') }}">Search</a></li>
                         <li><a href="{{ url_for('logout') }}">Logout</a></li>
                     {% endif %}
                     </ul>
