Search, SearchResult, Register, Login, Logout

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi, {{ current_user.username }}!</h1>
-    <h1>Remember the Extinct</h1>
-    <h2>This page was designed for you to understand the history of some extinct animals</h2>
+    <h1>Welcome to Mentor Match</h1>
+    <h2>It's our mission to match you with the right person for your study needs. </h2>
 
 {% endblock %}
