--- a/app/templates/searchResult.html
+++ b/app/templates/searchResult.html
@@ -7,7 +7,7 @@
 
     {% for mentor in mentors  %}
 
-        <div><p><a href="{{url_for('index')}}">{{mentor.name}}</a></p></div>
+        <div><p><a href="{{url_for('mentorAccount',username=mentor.username)}}">{{mentor.name}}</a></p></div>
 
     {% endfor %}
 
