--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,42 +2,28 @@
 
     {% block title %}
         {% if title %}
-        <title>{{ title }} - Mentor Match</title>
+            <title>{{ title }} - Mentor Match</title>
         {% else %}
-        <title>Welcome to Mentor Match</title>
+            <title>Welcome to Mentor Match</title>
         {% endif %}
     {% endblock %}
 
     {% block navbar %}
-        <nav class="navbar navbar-default">
-            <div class="container">
-
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{{ url_for('index') }}">Mentor Match</a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-
-
-                        <li><a href="{{ url_for('index') }}">Home</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Mentor Match</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     {% if current_user.is_anonymous %}
-
-                        <li><a href="{{ url_for('login') }}">Login</a></li>
+                        <li><a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a></li>
                     {% else %}
-                        <li><a href="{{ url_for('search') }}">Search</a></li>
-                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        <li><a class="nav-item nav-link" href="{{ url_for('account', username=current_user.username) }}">Account</a></li>
+                        <li><a class="nav-item nav-link" href="{{ url_for('search') }}">Search</a></li>
+                        <li><a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                     {% endif %}
-                    </ul>
-
-                </div>
+                </ul>
             </div>
         </nav>
         {% endblock %}
