--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,8 +4,10 @@
 {% block app_content %}
     <h1> Search </h1>
         <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+            <div class="col-md-4">
+                {{ wtf.quick_form(form) }}
+            </div>
         </div>
-    </div>
+
+        <script type="text/javascript" src="{{ url_for('static', filename='courses.js') }}"></script>
 {% endblock %}
