--- a/app/templates/searchResult.html
+++ b/app/templates/searchResult.html
@@ -5,10 +5,20 @@
 
 {% block app_content %}
 
-    {% for mentor in mentors  %}
+    {% if mentors|length > 0 %}
 
-        <div><p><a href="{{url_for('account',username=mentor.username)}}">{{mentor.name}}</a></p></div>
+        {% for mentor in mentors  %}
 
-    {% endfor %}
+            <div><p><a href="{{url_for('account',username=mentor.username)}}">{{mentor.name}}</a></p></div>
+
+        {% endfor %}
+
+    {% else %}
+
+        <h3>No Mentors for this Course</h3>
+
+    {% endif %}
+
+    <a href="{{ url_for('search') }}">New Search</a>
 
 {% endblock %}
