--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -24,15 +24,28 @@
         {% if sent|length > 0 %}
             <h5>Received Help Requests From:</h5>
             {% for request in sent %}
-                <p><a href="{{ url_for('account',username=request.username) }}">{{ request.name }}</a></p>
+                <p><a href="{{ url_for('account',username=request.username) }}">
+                    {% if request.name %}
+                        {{ request.name }}
+                    {% else %}
+                        {{ request.username }}
+                    {% endif %}
+                </a></p>
             {% endfor %}
         {% endif %}
 
         {% if received|length > 0 %}
             <h5>Sent Help Requests To:</h5>
             {% for request in received %}
-                <p><a href="{{ url_for('account',username=request.username) }}">{{ request.name }}</a></p>
+                <p><a href="{{ url_for('account',username=request.username) }}">
+                    {% if request.name %}
+                        {{ request.name }}
+                    {% else %}
+                        {{ request.username }}
+                    {% endif %}
+                </a></p>
             {% endfor %}
+            <a href="{{ url_for('resolve') }}">Resolve Requests</a>
         {% endif %}
 
     {% else %}
