--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,34 +1,49 @@
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='finalProject.css') }}" type="text/css" />
+</head>
+
 {% extends 'bootstrap/base.html' %}
 
     {% block title %}
         {% if title %}
-            <title>{{ title }} - Mentor Match</title>
+            {{ title }} - Mentor Match
         {% else %}
-            <title>Welcome to Mentor Match</title>
+            Welcome to Mentor Match
         {% endif %}
     {% endblock %}
 
+
     {% block navbar %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Mentor Match</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle btn-custom" data-toggle="collapse" data-target="#topNavbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="topNavbar">
+                <ul class="nav navbar-nav font-allerta-stencil">
+                    <li><a class="nav-item nav-link text-yellow" href="#">Mentor Match</a></li>
                     {% if current_user.is_anonymous %}
-                        <li><a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a></li>
+                        <li><a class="nav-item nav-link text-yellow" href="{{ url_for('login') }}">Login</a></li>
                     {% else %}
-                        <li><a class="nav-item nav-link" href="{{ url_for('account', username=current_user.username) }}">Account</a></li>
-                        <li><a class="nav-item nav-link" href="{{ url_for('search') }}">Search</a></li>
-                        <li><a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                        <li><a class="nav-item nav-link text-yellow" href="{{ url_for('account', username=current_user.username) }}">Account</a></li>
+                        <li><a class="nav-item nav-link text-yellow" href="{{ url_for('search') }}">Search</a></li>
+                        <li><a class="nav-item nav-link text-yellow" href="{{ url_for('logout') }}">Logout</a></li>
                     {% endif %}
                 </ul>
             </div>
         </nav>
+
+        <br><br><br><br><br>
         {% endblock %}
 
+
         {% block content %}
+            <section class="bg-light-blue text-black font-open-sans">
             <div class="container">
 
                 {% with messages = get_flashed_messages() %}
@@ -43,6 +58,7 @@
 
                 {% block app_content %}{% endblock %}
             </div>
+            </section>
 
         {% endblock %}
 
