--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,14 +17,14 @@
     {% block navbar %}
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle btn-custom" data-toggle="collapse" data-target="#topNavbar">
+                <button type="button" class="navbar-toggle btn-custom" data-toggle="navbar-collapse" data-target="#topNavbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
             </div>
-            <div class="collapse navbar-collapse" id="topNavbar">
+            <div class="navbar-collapse" id="topNavbar">
                 <ul class="nav navbar-nav font-allerta-stencil">
                     <li><a class="nav-item nav-link text-yellow" href="#">Mentor Match</a></li>
                     {% if current_user.is_anonymous %}
