Messing around with add form js

--- a/app/templates/editAccount.html
+++ b/app/templates/editAccount.html
@@ -3,15 +3,43 @@
 
 {% block app_content %}
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script >$(document).ready(function() {
+	var max_fields      = 5; //maximum input boxes allowed
+	var wrapper   		= $(".input_fields_wrap"); //Fields wrapper
+	var add_button      = $(".add_field_button"); //Add button ID
+
+	var x = 1; //initlal text box count
+	$(add_button).click(function(e){ //on add input button click
+		e.preventDefault();
+		if(x < max_fields){ //max input box allowed
+			x++; //text box increment
+			$(wrapper).append('<div>{{ form.department.label }}<br>{{ form.department(size=1)}}<br>{{form.course.label}}<br>{{form.course(size=1)}}<a href="#" class="remove_field">Remove</a></div>'); //add input box
+		}
+	});
+
+	$(wrapper).on("click",".remove_field", function(e){ //user click on remove text
+		e.preventDefault(); $(this).parent('div').remove(); x--;
+	})
+});</script>
+
+
+
+
+
     <h1>Edit Account</h1>
+<div class="input_fields_wrap">
     <div class="row">
         <div class="col-md-4">
+            <button class="add_field_button">Add More Fields</button>
             {{ wtf.quick_form(form) }}
+
         </div>
 
         <a href="{{ url_for('add_course') }}">Add Course Listing</a>
 
     </div>
+</div>
 
     <script type="text/javascript" src="{{ url_for('static', filename='courses.js') }}"></script>
 
