--- a/app/templates/editAccount.html
+++ b/app/templates/editAccount.html
@@ -3,28 +3,61 @@
 
 {% block app_content %}
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script >$(document).ready(function() {
-	var max_fields      = 5; //maximum input boxes allowed
-	var wrapper   		= $(".input_fields_wrap"); //Fields wrapper
-	var add_button      = $(".add_field_button"); //Add button ID
+<!-- Bootstrap css library -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Bootstrap js library -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script >$(document).ready(function(){
+    //group add limit
+    var maxGroup = 10;
 
-	var x = 1; //initlal text box count
-	$(add_button).click(function(e){ //on add input button click
-		e.preventDefault();
-		if(x < max_fields){ //max input box allowed
-			x++; //text box increment
-			$(wrapper).append('<div>{{ form.department.label }}<br>{{ form.department(size=1)}}<br>{{form.course.label}}<br>{{form.course(size=1)}}<a href="#" class="remove_field">Remove</a></div>'); //add input box
-		}
-	});
+    //add more fields group
+    $(".addMore").click(function(){
+        if($('body').find('.fieldGroup').length < maxGroup){
+            var fieldHTML = '<div class="form-group fieldGroup">'+$(".fieldGroupCopy").html()+'</div>';
+            $('body').find('.fieldGroup:last').after(fieldHTML);
+        }else{
+            alert('Maximum '+maxGroup+' groups are allowed.');
+        }
+    });
 
-	$(wrapper).on("click",".remove_field", function(e){ //user click on remove text
-		e.preventDefault(); $(this).parent('div').remove(); x--;
-	})
+    //remove fields group
+    $("body").on("click",".remove",function(){
+        $(this).parents(".fieldGroup").remove();
+    });
 });</script>
 
 
+<form method="post" action="submit.php">
 
+    <div class="form-group fieldGroup">
+        <div class="input-group">
+            <input type="text" name="name[]" class="form-control" placeholder="Enter name"/>
+            <input type="text" name="email[]" class="form-control" placeholder="Enter email"/>
+            <div class="input-group-addon">
+                <a href="javascript:void(0)" class="btn btn-success addMore"><span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span> Add</a>
+            </div>
+        </div>
+    </div>
+
+    <input type="submit" name="submit" class="btn btn-primary" value="SUBMIT"/>
+
+</form>
+
+<!-- copy of input fields group -->
+<div class="form-group fieldGroupCopy" style="display: none;">
+    <div class="input-group">
+         {{form.department}}
+         {{form.course}}
+        <input type="text" name="name[]" class="form-control" placeholder="Enter name"/>
+        <input type="text" name="email[]" class="form-control" placeholder="Enter email"/>
+        <div class="input-group-addon">
+            <a href="javascript:void(0)" class="btn btn-danger remove"><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remove</a>
+        </div>
+    </div>
+</div>
 
 
     <h1>Edit Account</h1>
