Forms updated with button styling 12.5.18

--- a/app/static/finalProject.css
+++ b/app/static/finalProject.css
@@ -115,3 +115,8 @@ nav-item:hover {
     color: #F9D33B;
     background-color: #A4BEDB;
 }
+
+.navbar li{
+  padding-left:30px;
+  padding-right:30px;
+}
