--- a/app/templates/editAccount.html
+++ b/app/templates/editAccount.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
 
         //THIS SCRIPT HAS BEEN LEFT IN THIS TEMPLATE BECAUSE THE JINJA PIECES CAUSED ERRORS WHEN IN AN EXTERNAL JS FILE
@@ -43,8 +43,8 @@
                         }
                         course_select.innerHTML = optionHTML;
                     })
-
                 });
+
             };
 
             $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
@@ -66,19 +66,10 @@
                     url : "{{ url_for('mentor_courses') }}",
                     data: JSON.stringify(json),
                     contentType: 'application/json;charset=UTF-8',
-                }).done(function() {
-                      document.getElementById('submitted').innerHTML = "Courses Added!";
+                    success: function() {
+                        document.getElementById('submitted').innerHTML = "Courses Added!";
+                    }
                 });
-                {#$.post(#}
-                {#    '/add_mentor_course',#}
-                {#    {#}
-                {#        "courses": course_ids#}
-                {#    },#}
-                {#    function() {#}
-                {#       #}
-                {##}
-                {#    }#}
-                {#)#}
             });
 
         });
