--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-md-4">
                 <form action="" method="post">
-                    {{ form.hidden_tag() }}
+                    {{ contact.hidden_tag() }}
                     <p>
                         {{ contact.message.label }}<br>
                         {{ contact.message(cols="32", rows="5") }}
@@ -68,5 +68,6 @@
             </div>
         </div>
     {% endif %}
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 {% endblock %}
