--- a/app/templates/editAccount.html
+++ b/app/templates/editAccount.html
@@ -30,13 +30,13 @@
                     {% endfor %}
                 </p>
                 <p>
-                    {{ form.department.label }}<br>
-                    {{ form.department }}
+                    {{ form.department.label }} &nbsp;&nbsp;&nbsp; {{ form.course.label }}<br>
+                    {{ form.department }} &nbsp; &nbsp;{{ form.course }}
                 </p>
-                <p>
+                <!--<p>
                     {{ form.course.label }}<br>
                     {{ form.course }}
-                </p>
+                </p>-->
                 <p>
                     {{ form.remove.label }}<br>
                     {{ form.remove }}
