--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,11 +3,22 @@
 {% block content %}
     <section class="bg-light-blue text-black font-open-sans">
         <div class="container">
-            <h1>Welcome to Mentor Match</h1>
+            <h1>Welcome to <span class="font-allerta-stencil text-yellow">Mentor Match</span></h1>
             <h2>It's our mission to match you with the right person for your study needs. </h2>
-            {% for row in rows %}
-            <br><br><br><br>
-            {% endfor %}
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <!--<footer class="text-center footer-custom bg-dark-blue text-yellow">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <a href="#topNavbar" title="To Top">
+                            <span class="glyphicon-chevron-up footer-glyphicon"></span>
+                        </a>
+                        <h3 class="font-allerta-stencil">Mentor Match</h3><br>
+                        <h5 class="font-open-sans">Connecting Student Athletes with Peer Mentors</h5><br>
+                        <p class="font-open-sans">Site Support: <br> <a href="mailto:alang@ithaca.edu" target="_top">MentorMatchSupport@gmail.com</a></p>
+                    </div>
+                </div>
+            </footer>-->
         </div>
     </section>
 
