--- a/app/static/finalProject.css
+++ b/app/static/finalProject.css
@@ -38,6 +38,10 @@
     color: #FFFFFF;
 }
 
+.text-bright-blue {
+    color: blue;
+}
+
 /* font styling classes */
 
 .font-allerta-stencil {
@@ -111,7 +115,7 @@
     color: #F9D33B;
 }
 
-nav-item:hover {
+.nav-item:hover {
     color: #F9D33B;
     background-color: #A4BEDB;
 }
@@ -119,4 +123,35 @@ nav-item:hover {
 .navbar li{
   padding-left:30px;
   padding-right:30px;
+}
+
+
+html, body {
+    margin: 0px;
+    padding: 0px;
+}
+
+.row {
+    width: 100%;
+}
+
+.container {
+    position: relative;
+    background-color: #A4BEDB;
+
+    overflow: hidden;
+    width: 1000px;
+    margin: 0 auto;
+    min-height: 100%;
+}
+
+/* footer styling */
+
+.footer-custom {
+    background-color: #031A6B;
+    color: #F9D33B;
+}
+
+.footer-glyphicon {
+    color: #F9D33B;
 }
