--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Sign In</h1>
+    <h1 class="font-allerta-stencil">Sign In</h1>
         <div class="row">
         <div class="col-md-4">
             <form action="" method="post">
