--- a/app/templates/editAccount.html
+++ b/app/templates/editAccount.html
@@ -44,11 +44,11 @@
             </form>
         </div>
         <div class="input_fields_wrap">
-            <button class="add_field_button">Add Course to Mentor</button>
+            <button class="add_field_button bg-yellow text-black">Add Course to Mentor</button>
             <p id="submitted"></p>
         </div>
         <div style="margin-left: 50px;">
-            <button class="submit_add_courses">Save Course Changes</button>
+            <button class="submit_add_courses bg-yellow text-black">Save Course Changes</button>
             <form action="{{ url_for('add_course')}}" style="margin: 20px;">
                 <input class="bg-yellow text-black" type="submit" value="Add Course Listing" />
             </form>
