--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,8 +5,19 @@
         <div class="container">
             <h1>Welcome to <span class="font-allerta-stencil text-yellow">Mentor Match</span></h1>
             <h2>It's our mission to match you with the right person for your study needs. </h2>
+
+            <h4>Mentor Match strives to help struggling student athletes find academic success by
+                connecting them with peer mentors excelling in certain courses. Founded in 2018 by
+                Sonya Gattus, Audrey Lang, and Kate Polley, Mentor Match has a 110% success rate of
+                improving student athletes' grades, raising their self-esteem, and aiding to create
+                lifelong (or at least college career-long) friendships. <br><br>
+                Some of our most successful peer mentors include Professor Pancake, Mouse Cop, and
+                Little Russian Lady. Successes at Mentor Match are, forgive the pun, unmatchable,
+                and the positive outcomes can last a lifetime. <br><br>
+                <a href="{{ url_for('register') }}" style="color: #F9D33B">Sign up for an account now</a> to begin seeing
+                the benefits for yourself! </h4>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <!--<footer class="text-center footer-custom bg-dark-blue text-yellow">
                 <div class="row">
                     <div class="col-sm-12">
