--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>Not Found</h1>
-    <p><a href="{{ url_for('index') }}">Home</a></p>
+    <h1 class="font-allerta-stencil text-yellow">Not Found</h1>
+    <p><button class="bg-yellow text-black"><a href="{{ url_for('index') }}">Home</a></button></p>
 {% endblock %}
