--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>An unexpected error has occurred</h1>
-    <p>The administrator has been notified. Sorry for the inconvenience!</p>
-    <p><a href="{{ url_for('index') }}">Home</a></p>
+    <h1 class="font-allerta-stencil text-yellow">An unexpected error has occurred</h1>
+    <p class="font-open-sans text-black">The administrator has been notified. Sorry for the inconvenience!</p>
+    <p><button class="bg-yellow text-black"><a href="{{ url_for('index') }}">Home</a></button></p>
 {% endblock %}
