--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -31,5 +31,5 @@
             </form>
         </div>
     </div>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <p>New User? <a href="{{ url_for('register') }}" style="color: #F9D33B">Click to Register!</a></p>
 {% endblock %}
